# graphwiz-template

./: LICENSE  README.md  cookiecutter.json
.github/: dependabot.yml
.github/workflows/: ci.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.project_slug}}/config/: config.example.yaml
{{cookiecutter.project_slug}}/docs/: arc42.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace("-", "_")}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace("-", "_")}}/agents/: __init__.py  orchestrator.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace("-", "_")}}/analysis/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace("-", "_")}}/graph/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace("-", "_")}}/trading/: __init__.py  engine.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace("-", "_")}}/utils/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_main.py
